log
ju., 12 de may. de 2022 11:49:19: 
 sudoku.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 59 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:9: error: redefinition of 'num'
     int num[8] = {0};
         ^~~
sudoku.c:50:9: note: previous definition of 'num' was here
     int num[8] = {0};
         ^~~
Compilation failed
f30ee2e
ju., 12 de may. de 2022 11:52:41: 
 sudoku.c | 26 ++++++++++++--------------
 1 file changed, 12 insertions(+), 14 deletions(-)
 tests:  0|0
   [ INFO ] obteniendo nodos adyacentes
03f69e8
Fri, 13 May 2022 16:07:37: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
736a35c
Fri, 13 May 2022 16:29:03: 
 tests:  0|0
2f783d4
Fri, 13 May 2022 16:36:05: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
d6d0115
Fri, 13 May 2022 16:55:38: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
8c39559
Fri, 13 May 2022 16:56:08: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
cac5afa
Fri, 13 May 2022 16:56:47: 
 tests:  0|0
b7eac95
Fri, 13 May 2022 16:57:54: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:92:31: error: expected expression before '=' token
   92 |           num3[n->sudo[i][j]- = 1;
      |                               ^
sudoku.c:92:35: error: expected ';' before '}' token
   92 |           num3[n->sudo[i][j]- = 1;
      |                                   ^
      |                                   ;
   93 |         }
      |         ~                          
Compilation failed
04879a7
Fri, 13 May 2022 16:58:05: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5029862
